# key-value-example-app

./: .eslintrc  .gitignore  .gitpod.yml  CONTRIBUTING.md  README.md  docker-compose.yml  index.html  package.json  tsconfig.json  webpack.config.js
.github/workflows/: ci.yml
contracts/kv_todo/: CMakeLists.txt
contracts/kv_todo/include/: kv_todo.hpp
contracts/kv_todo/ricardian/: kv_todo.contracts.md
contracts/kv_todo/src/: CMakeLists.txt  kv_todo.cpp
cypress/integration/: index.spec.js
docker/: Dockerfile  deploy_contracts.sh
src/: actions.ts  index.tsx  styles.css
src/Entry/: index.tsx
src/Error/: index.tsx
src/NewEntry/: index.tsx
